liberacion al publico

--- a/index.html
+++ b/index.html
@@ -68,6 +68,10 @@
                             :class="(estado.valor && posiciones.ocu.length > 0) ? '' : 'disabled'" 
                             @click="ordenarAutos">Ordenar</button>
 
+                    <button class="btn btn-danger" 
+                            :class="(estado.valor && posiciones.ocu.length > 0) ? '' : 'disabled'" 
+                            @click="rotarAutos">Rotar</button>
+
                 </div>
 
             </div>
