--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Elevator</title>
+    <title>Elevador</title>
 
     <!-- FONTAWESOME -->
     <script src="https://kit.fontawesome.com/ef5337ece0.js" crossorigin="anonymous"></script>
@@ -118,7 +118,7 @@
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
     
     <!-- SCRIPTS -->
-    <script src="scripts.js"></script>
+    <script src="core.js"></script>
 
     <!-- BOOTSTRAP Y POPPER -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js" integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous"></script>
